--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,5 +6,8 @@ spring.datasource.password=Post*124*
 
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-# Hibernate ddl auto (create, create-drop, validate, update)
+# Hibernate ddl auto (create, create-drop, NotValidException, update)
 spring.jpa.hibernate.ddl-auto= update
+
+jwt.expiration=3600
+jwt.secret=17lwtNiICOdRgDlIZiFs9Hz3oR1cIGztpcZgnwyQzy0=
