--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.datasource.password=Post*124*
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 # Hibernate ddl auto (create, create-drop, NotValidException, update)
-spring.jpa.hibernate.ddl-auto= update
+spring.jpa.hibernate.ddl-auto= create-drop
 
 jwt.expiration=3600
 jwt.secret=17lwtNiICOdRgDlIZiFs9Hz3oR1cIGztpcZgnwyQzy0=
